Installment property descriptor and fragments
git-svn-id: http://svn.codehaus.org/esper/esper/branches/major300@1577 d91eb1b3-1215-0410-9718-d41490442091